CLASSES-3145 11.4 upgrade: fix lessonbuilder z-index styles breaking NYU portal styles near tool menu

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -1896,7 +1896,7 @@ nav.Mrphs-container--toolTitleNav {
         margin-bottom: 1em !important;
 }
 /* menu off user icon, site menu in narrow, site menu in  wide mode */
-.Mrphs-mainHeader, .Mrphs-skipNav__menu, #selectSiteModal, #toolMenuWrap {
+.Mrphs-mainHeader, .Mrphs-skipNav__menu, #selectSiteModal {
         z-index: 100002 !important;
 	position:relative;
 }
